# basel-devs.github.io

./: .gitignore  index.html  start.sh
api/: .basel.hpp.swp  basel.hpp
api/basel/: basel.hpp
api/basel/detail/: help.hpp  impl.hpp  why.hpp
api/js/: htmlencode.hpp  string.hpp
api/xxhr/: .session.hpp.swp
api/xxhr/impl/: .session-emscripten.hpp.swp
backend/: CMakeLists.txt
backend/src/: .main.cpp.swp  main.cpp
backend/src/basel/: api_tpl.hpp  api_tpl_content.hpp  url_escape.hpp
backend/src/basel/try/: api_tpl_content.cpp  api_tpl_content.js
meetups/00-29062017/implementing_named_parameters/: named-parameters-in-cpp.odp
meetups/00-29062017/when-json-meets-metaprogramming/: json-meets-metaprogramming.odp
meetups/00-29062017/when-json-meets-metaprogramming/person/: a.out  bad_from_json.hpp  good_from_json.hpp  main.cpp  main.cpp.orig  person.hpp
meetups/00-29062017/when-json-meets-metaprogramming/person/lib-cpp-pre/: .directory  .gitlab-ci.yml
meetups/00-29062017/when-json-meets-metaprogramming/person/lib-cpp-pre/mapbox/traits/: .is_type_in_variant.hpp.swo
